# promcraft

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: python-app.yml  python.yml  release.yaml
src/old/: base.py  literals.py
src/old/operators/: aggregation.py  binary.py  misc.py
src/prom_ql/: __init__.py  aggregation.py  base.py  functions.py  funtions.py  literals.py  operator.py  scalar.py  string.py  values.py  vector.py
src/prom_ql/expression/: __init__.py  aggregation.py  base.py  binary.py  funtions.py  literals.py  misc.py
src/prom_ql/operators/: __init__.py  aggregation.py  binary.py  misc.py
src/promcraft/: __init__.py  aggregation.py  base.py  functions.py  operator.py  scalar.py  string.py  variable.py  vector.py
tests/: test_aggregation.py  test_base.py  test_expr.py  test_functions.py  test_literals.py  test_operator.py  test_pretty.py  test_query.py  test_scalar.py  test_string.py  test_variable.py  test_vector.py
tests/operators/: test_aggregation.py  test_binary.py
