[project]
name = "prom-ql"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Babka",email = "159peter951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -vv -q --mypy --ruff --ruff-format --cov=prom_ql --cov-report='html'"

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true


[tool.poetry]
packages = [{include = "prom_ql", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
pytest-mypy = "^1.0.1"
pytest-ruff = "^0.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
