[project]
name = "promcraft"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Babka",email = "159peter951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-mypy (>=1.0.1,<2.0.0)",
    "pytest-ruff (>=0.5,<0.6)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--strict-markers
--tb=short

--cov=promcraft
--cov-report=html
--cov-report=xml
--cov-report=term

--ruff
--ruff-format

--mypy
"""

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "SIM", "Q"]
ignore = ["PLR0913", "PLC0415", "PLR2004"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
files = ["src/promcraft", "tests"]
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true


[tool.poetry]
packages = [{include = "promcraft", from = "src"}]
include = ["py.typed"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
